# AI_WebApp_Auto-Tester

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.yml  gitpush.txt  package.json  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py  requirements.txt
backend/api/: test_runs.py  ws.py
backend/models/: test_run.py
backend/services/: test_executor.py
backend/tests/: test_api.py
docker/: Dockerfile.ai-orchestrator  Dockerfile.backend  Dockerfile.frontend  Dockerfile.runtime
docs/: api.md  architecture.md  contributing.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/[id]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/report/[id]/: page.tsx
frontend/src/components/: IssueCard.tsx  LiveLogStream.tsx  ProgressBar.tsx  TestInputForm.tsx
frontend/src/lib/: api.ts  websocket.ts
frontend/src/types/: index.ts
reports/generators/: report_generator.py
runtime/: main.py  requirements.txt
runtime/browser/: runner.py
services/accessibility/: main.py
services/ai-orchestrator/: main.py  orchestrator.py  requirements.txt
services/ai-orchestrator/agents/: planner.py
services/ai-orchestrator/llm/: provider.py
services/security-probe/: main.py
services/visual-qa/: main.py  requirements.txt
