[project]
name = "ai-webapp-auto-tester"
version = "0.1.0"
description = "AI-powered web application testing platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "websockets>=12.0",
    "python-docx>=1.1.0",
    "reportlab>=4.2.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "python-multipart>=0.0.12",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "services", "runtime", "reports"]
